@@ -4,6 +4,7 @@ Version 1.7.0-svn:
      and it is now <preferences>/data/add-ons
    * Added --rng-seed command line option to specify a value to seed the random
      number generator with.
+   * new logdomain : uploader to see stat-upload related actions
  * AI:
    * Fixed incorrect handling of poisoning attacks when suggesting best attack
      in user interface
